Update dependeny imports

--- a/epack-single-select.html
+++ b/epack-single-select.html
@@ -1,5 +1,5 @@
-<link rel="import" href="../../iron-selector/iron-selector.html">
-<link rel="import" href="../../paper-radio-button/paper-radio-button.html">
+<link rel="import" href="../iron-selector/iron-selector.html">
+<link rel="import" href="../paper-radio-button/paper-radio-button.html">
 
 <dom-module id="epack-single-select">
 <template>
